cloud_portal/front_end/app/styles/_theme_override.scss
/* Here we override some default bootstrap styles and behavior for our purposes */


@import '_theme_variables';


$font-size-a-bit-large:   ceil($font-size-base * 1.15); //~16px - we just need 16px sometimes :-)

.panel{
  box-shadow: 0 1px 2px transparentize($dark15,0.9);
}

.navbar-brand{
  padding:0;
  font-size: $font-size-h3;
  margin-right:16px;
}

.navbar-brand>img{
  height:40px;
  margin:8px 0;
  display: inline-block;
}

.navbar-toggle {
  width: 40px;
  height:40px;
  font-size: $font-size-h3;
}

.nav > li > a{
  padding: 16px;
  line-height: 24px;
  font-size: $font-size-large;
}

@media (max-width: $grid-float-breakpoint-max) {
  .navbar-collapse{
    .nav > li > a {
      padding: 6px 8px;
    }
    .nav > li > .btn-wrapper {
      padding: 4px 8px;
      width: 100%;
      a {
        width: 100%;
      }
    }
    .navbar-nav {
      margin: 0px;
    }
  }
}
.nav .dropdown-menu > li > a{
  padding: 6px 16px;
  font-size: $font-size-base;
}

.dropdown-menu {
  padding: 8px 0;
  border-radius: 0;
  @include box-shadow(0 2px 4px transparentize($dark15,0.8));
}

.navbar-nav > li > .dropdown-menu {
  min-width:100%;
}


.nav > li > a:hover {
  background-color: $light2 !important;
}

h1{
  margin-bottom: $line-height-computed;
}

h2, h3{
  max-width: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}
h2{
  margin:0;
}

h3{
  margin-top: ( $line-height-computed / 2 );
  margin-bottom: ( $line-height-computed / 4 );
  font-weight: normal;
}

h1>.label{
  font-size:60%;
  vertical-align: 33%;
}

.modal-open {
  overflow: auto;
}

.modal {
  &.fade .modal-dialog {
    @include translate(0, -20px);
    @include transition-transform(0.1s ease-out);
  }

  &.in .modal-dialog { @include translate(0, 0) }

  .modal-body{
    padding-top: 0;
    padding-bottom: 0;
  }

  .modal-footer{
    margin-top: 0;
    text-align: left;
  }

  .modal-header .close{
    position: absolute;
    right: 0;
    top: 0;
    width:40px;
    height:40px;

    &:hover{
      background-color: $light2;
    }
  }

  .help-block{ /* Do not jump modal size when help block changes (help-block is below the input)*/
    min-height:40px;
  }
}


@media (min-width: $dialog-sm-float-breakpoint) {
  .modal-sm {
    width: $modal-sm;
    margin: 108px auto;
  }
}

@media (min-width: $screen-sm-min) {
  // Automatically set modal's width for larger viewports
  .modal-dialog {
    margin: 108px auto;
  }

  .modal-content {
    @include box-shadow(0px 20px 50px 0px transparentize($dark15,0.85));
  }
}

@media (min-width: $screen-sm-min) {
  .form-horizontal .help-block { /* Do not jump form when help block changes (help-block is to the right from the input) */
    position: absolute;
  }
}

.panel > .table, .panel > .table-responsive {
  margin-bottom: 16px;
}

.jumbotron {
  text-align: center;
}


hr {
  margin-top:    16px;
  margin-bottom: 16px;
}


.form-control{
  box-shadow: none;
  padding: $padding-base-vertical $padding-input-horizontal;

  &:focus {
    box-shadow: none;
  }

  &[disabled],
  fieldset[disabled] & {
    opacity:0.3;
  }
}


.btn{
  outline: none !important;;
  &:hover,
  &:active,
  &.active,
  &:focus,
  &.focus {
    outline: none !important;
  }
}

.btn-default{
  &:hover,
  &:focus,
  &.focus {
    background-color: transparentize($light5,0.75);
    border-color: $light8;
  }

  &:active,
  &.active{
    background-color: transparentize($light5,0.5) !important;
    border-color: transparentize($light5,0.5) !important;
    @include box-shadow(inset 0px 1px 0px 1px $light9);
    outline: none;
  }
}

.btn-primary{
  &:hover,
  &:focus,
  &.focus {
    background-color: $brand_l1;
    border-color: $brand_core;
  }

  &:active,
  &.active{
    background-color: $brand_core !important;
    border-color: $brand_core !important;
    @include box-shadow(inset 0px 1px 0px 1px $brand_d2);
    outline: none;
  }
}

select.form-control{
  -webkit-appearance: none;
  background-color: transparent;
}




.alert {
  font-size: $font-size-h4;
  padding-top: 8px;
  padding-bottom: 8px;
  @include box-shadow(0px 8px 4px 0px transparentize($light16, 0.9));
}
.alert-dismissable .close, .alert-dismissible .close{
  -webkit-appearance: none !important;
  outline: none !important;
  &:hover,
  &:focus,
  &:active{
    -webkit-appearance: none !important;
    outline: none !important;
  }

}


label {
  line-height:  16px;
  margin-bottom: 8px;
}


.radio,
.checkbox {
  margin-top: 16px;
  margin-bottom: 16px;
  line-height: 16px;
  label{
    min-height: 16px;
  }

  input[type="radio"],
  input[type="checkbox"] {
    margin-top: 2px;
  }

}

.form-control-static{
  min-height:32px;
}


.table{
  th{
    text-transform: uppercase;
    font-size: 13px;
  }
}

